# sandbox

./: .gitignore  README.md  pixi.toml
json/: CMakeLists.txt  conanfile.txt
json/src/: main.cpp
linalg/armadillo/: armadillo.pro  tst_armadillotests.cpp
metal/MetalComputeBasic/: CMakeLists.txt
metal/adder_cpp/: CMakeLists.txt  main.cpp
metal/adder_objC/: adder.metal  main.cpp
metal/hello/: CMakeLists.txt  adder.metal  main.cpp
metal/sumaxis/: CMakeLists.txt  metal_host.cpp  metal_sum_axis.metal
performance/DistancePerformance/: DistancePerformance.pro  position.cpp  position.h  tst_distancetests.cpp
performance/InnerLoop/: InnerLoop.pro  loops.cpp  loops.h  timings.xlsx  tst_innerloop.cpp
performance/binding_latency_benchmark/: CMakeLists.txt  README.md  ResultPlotter.ipynb  pixi.toml
performance/binding_latency_benchmark/benchmark/: benchmark.py
performance/binding_latency_benchmark/src/: add.hpp  cpp_add.cpp  nanobind_add.cpp  pybind_add.cpp
performance/looporder/: looper.cpp  looper.h  looporder.pro  tst_loops.cpp
python/imageprocessing/: IAEA_Ball_Analysis.ipynb
python/itk/: ITKRegistrationTests.ipynb  sliceA.tif  sliceB.tif
python/plotting/: MovieTest.ipynb  PlotInPlotTest.ipynb
python/pybind11/pybindtest/: pybindtest.cpp  pybindtest.h  pybindtest.pro  pybindtest_global.h  tester.py
qt/CoverageDummies/: CoverageDummies.pro  coveragedummies.cpp  coveragedummies.h  coveragedummies_global.h
qt/CoverageTests/: CoverageTests.pro  runCoverage.sh  tst_coverageteststest.cpp
qt/DialogCrasher/: DialogCrasher.pro  dialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
qt/QtVolumeRenderer/: CMakeLists.txt  README.md  pixi.toml  resources.qrc
qt/QtVolumeRenderer/shaders/: volume.frag  volume.vert
qt/QtVolumeRenderer/src/: VolumeRenderWidget.cpp  VolumeRenderWidget.h  VolumeViewerWidget.cpp  VolumeViewerWidget.h  main.cpp
qt/Show3D/: Show3D.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  volumedisplaywidget.cpp  volumedisplaywidget.h  volumedisplaywidget.ui
qt/charttest/: charttest.pro  mainwindow.cpp  mainwindow.ui
qt/modelessdlg/: mainwindow.cpp  mainwindow.h  mainwindow.ui  modelessdialog.cpp  modelessdialog.h  modelessdialog.ui  modelessdlg.pro
qt/roiwidget/: customdial.cpp  customdial.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  roiwidget.pro  uxroiwidget.cpp  uxroiwidget.h  uxroiwidget.ui
qt/sharedptr/: mainwindow.cpp  mainwindow.h  mainwindow.ui  sharedptr.pro
qt/signalsnslots/: mainwindow.cpp  mainwindow.h  mainwindow.ui  recondialog.cpp  recondialog.h  signalsnslots.pro
qt/volumetric/: volumetric.pro
stl/folders/: CMakeLists.txt  foldertests.cpp
stl/maptests/: main.cpp  maptests.pro
stl/stringformat/: CMakeLists.txt  stringformat.cpp  stringformat.pro  tst_strfmt.cpp
threading/ThreadPool/: CMakeLists.txt  ThreadPool.cpp
threading/longdata/: crosscorrelation.cpp  crosscorrelation.h  longdata.pro  main.cpp  processor.cpp  processor.h
threading/policy/: policy.cpp
threading/stl/tSTLalg/: tSTLalg.pro  tst_stlalg.cpp
